--- a/src/modules/main/footer/footer.html
+++ b/src/modules/main/footer/footer.html
@@ -1,9 +1,9 @@
 <footer class="main-footer">
     <strong>
-        <span>{{ $t("labels.copyright") }} &copy; {{currentYear}}</span>
-        <a href="https://erdkse.com" target="_blank" rel="noopener noreferrer">
+        <span>{{ $t("labels.copyright") }} &copy; {{currentYear}} brandon.jeong@nsuslab.com</span>
+        <!-- <a href="https://erdkse.com" target="_blank" rel="noopener noreferrer">
             <span>&nbsp;erdkse.com</span>
-        </a>
+        </a> -->
         <span>.</span>
     </strong>
     <div class="float-right d-none d-sm-inline-block">
